--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,17 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- master
+  -master
 
 pool:
   vmImage: 'windows-latest'
 
 steps:
-  - task: HugoTask@1
-    inputs:
-      source:
-      destination:'$(System.DefaultWorkingDirectory)/public'
+- task: HugoTask@1
+  inputs:
+    source: 
+    destination: '$(System.DefaultWorkingDirectory)/public'
 
-- task: PublishPipelineArtifact@1
-    inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/public'
-    artifact: ''
-    publishLocation: 'pipeline'
+- task: PublishBuildArtifacts@1
+  inputs:
+  targetPath:'$(System.DefaultWorkingDirectory)/public'
+  artifact: ''
+  publishLocation: 'pipeline'
