Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,7 @@ steps:
     source: 
     destination: '$(System.DefaultWorkingDirectory)/public'
 
-- task: PublishBuildArtifacts@1
+- task: PublishPipelineArtifact@1
   inputs:
-  targetPath:'$(System.DefaultWorkingDirectory)/public'
-  artifact: ''
-  publishLocation: 'pipeline'
+    targetPath: '$(System.DefaultWorkingDirectory)/public'
+    publishLocation: 'pipeline'
