--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://Pruebas-Bancolombia-3.0.com/"
+baseURL = "http://example.org"
 languageCode = "en-us"
 title = ""
 theme = "Theme_Bancolombia"
