--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org"
+baseURL = "http://estefaniavargas.github.io"
 languageCode = "en-us"
 title = ""
 theme = "Theme_Bancolombia"
