--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,9 @@ steps:
 - task: HugoTask@1
   inputs:
     source: 
-    destination: '$(System.DefaultWorkingDirectory)/public/config/_default'
+    destination: '$(System.DefaultWorkingDirectory)/public'
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/public/config/_default'
+    targetPath: '$(System.DefaultWorkingDirectory)/public'
     publishLocation: 'pipeline'
