--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 trigger:
+
 - master
 
 pool:
@@ -14,3 +15,13 @@ steps:
   inputs:
     targetPath: '$(System.DefaultWorkingDirectory)/public'
     publishLocation: 'pipeline'
+
+- task: GitHubPagesPublish@1
+  inputs:
+    docPath: '$(System.DefaultWorkingDirectory)\Documentation\site\*'
+    githubusername: 'EstefaniaVargas'
+    githubemail: 'vargasclavijoestefania@gmail.com'
+    githubaccesstoken: '$(token_hugo)'
+    repositoryname: 'EstefaniaVargas.github.io'
+    branchname: 'master'
+    commitmessage: 'Automated Release $(Release.ReleaseId)'
