modifies and new public folder

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "http://estefaniavargas.github.io"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "vertical_nav"
+relativeURLs = true
 
 [outputs]
   home = ["HTML", "JSON"]
