--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://estefaniavargas.github.io"
+baseURL = "https://estefaniavargas.github.io"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "vertical_nav"
