--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,11 @@ relativeURLs = true
   home = ["HTML", "JSON"]
 
 [params]
-  custom_css = ["/css/style.css"]
+  custom_css = ["/css/template-vertical-nav/layouts.css", 
+                "/css/template-vertical-nav/menus.css", 
+                "/css/template-vertical-nav/lists.css", 
+                "/css/template-vertical-nav/shortcodes.css"
+                ]
 
 [menu]
   [[menu.main]]
